Added banner Added validation and Actuator endpoints Validation is working and exception handler is written Problem detail is enabled.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=llama-text-analyzer
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.show-actuator=true
+management.endpoints.web.exposure.include=*
+spring.mvc.problemdetails.enabled=true
+logging.level.web=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.ai=DEBUG
+logging.level.org.springframework.web.servlet=DEBUG
