Working code which can understand English, Hindi, Russian & spanish languages and respond in english with summary and sentiment.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,20 @@
 spring.application.name=llama-text-analyzer
-springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.show-actuator=true
+springdoc.swagger-ui.path=/swagger-ui.html
 management.endpoints.web.exposure.include=*
 spring.mvc.problemdetails.enabled=true
-logging.level.web=DEBUG
-logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.ai=DEBUG
+logging.level.org.springframework.web.nodeValue=DEBUG
 logging.level.org.springframework.web.servlet=DEBUG
+logging.level.web=DEBUG
+logging.level.org.springframework.web=TRACE
+spring.ai.ollama.base-url=http://localhost:11434
+spring.ai.ollama.chat.enabled=true
+spring.ai.ollama.chat.options.format=json
+spring.ai.ollama.chat.options.keep-alive=5m
+spring.ai.ollama.chat.options.mirostat=5
+spring.ai.ollama.chat.options.model=phi3
+spring.ai.ollama.chat.options.num-ctx=2048
+spring.ai.ollama.chat.options.temperature=0.5
+spring.ai.ollama.chat.options.top-k=40
+spring.ai.ollama.chat.options.top-p=0.5
